--- a/Product_Recommendations_Popularity_based_and_Collaborative_Filtering_models.ipynb
+++ b/Product_Recommendations_Popularity_based_and_Collaborative_Filtering_models.ipynb
@@ -3572,7 +3572,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Top-5 personalised recommendations using Collaborative Filtering - SVD approach:"
+    "#### Top-5 recommendations using Collaborative Filtering - SVD approach:"
    ]
   },
   {
@@ -3617,7 +3617,7 @@
    "source": [
     "#### Insights:\n",
     "\n",
-    "Since Model-based Collaborative Filtering is a personalised recommender system, the recommendations make sense to the user. The recommendations will turn into purchase transactions more easily which enhances business. This algorithm is entirely based on the past behavior and not on the context. This makes it one of the most commonly used algorithm as it is not dependent on any additional information. \n",
+    "Since Model-based Collaborative Filtering considers latent features and interactions between users and items, the recommendations make sense to the user. The recommendations will turn into purchase transactions more easily which enhances business. This algorithm is entirely based on the past behavior and not on the context. This makes it one of the most commonly used algorithm as it is not dependent on any additional information. \n",
     "    \n",
     "    For example: product recommendations by e-commerce player like Amazon and merchant recommendations by banks like American Express extensively use this approach.\n",
     "\n",
@@ -3625,6 +3625,15 @@
     "    \n",
     "    But this approach still works in places like news portals to recommend 'Popular News' by category(IT, Entertainment, Finance, etc...)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
