--- a/jupyter_files_for_training/Linear_Regression.ipynb
+++ b/jupyter_files_for_training/Linear_Regression.ipynb
@@ -13,9 +13,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Business problem:\n",
+    "# Problem Statement:\n",
     "\n",
-    "** *1. To predict housing prices based on the information we have about the attributes.* **"
+    "** To predict housing prices based on the given attributes.* **"
    ]
   },
   {
@@ -24,7 +24,7 @@
    "source": [
     "# Data Dictionary:\n",
     "\n",
-    "The Boston housing dataset has **506 rows**(samples/observations) and **14 columns**(attributes/features).\n",
+    "The Boston housing dataset has **506 rows**(samples/observations) and **14 columns**(attributes).\n",
     "\n",
     "**Predictor/Explanatory/Independent Variables**\n",
     "\n",
@@ -1011,7 +1011,7 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x17e4d51a588>"
+       "<seaborn.axisgrid.PairGrid at 0x1f500b754a8>"
       ]
      },
      "execution_count": 14,
@@ -1043,7 +1043,7 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x17e4fd06828>"
+       "<seaborn.axisgrid.PairGrid at 0x1f502d3b0b8>"
       ]
      },
      "execution_count": 15,
@@ -1083,7 +1083,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x17e530ac8d0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1f505dd0278>"
       ]
      },
      "execution_count": 16,
@@ -1664,7 +1664,6 @@
     "from sklearn.linear_model import LinearRegression\n",
     "\n",
     "lm = LinearRegression()\n",
-    "print(lm)\n",
     "lm.fit(X_train, y_train)"
    ]
   },
@@ -1748,19 +1747,31 @@
    "source": [
     "**Interpreting the coefficients:**\n",
     "\n",
-    "- Holding all other features fixed, a 1 unit increase in **CRIM** (per capita crime rate by town) is associated with a **decrease of \\$96.05** in house price.\n",
-    "- Holding all other features fixed, a 1 unit increase in **ZN** (proportion of residential land zoned for lots over 25,000 sq.ft) is associated with an **increase of \\$70.401** in house price.\n",
-    "- Holding all other features fixed, a 1 unit increase in **INDUS** () is associated with an **increase of \\$15.266** in house price.\n",
-    "- Holding all other features fixed, a 1 unit increase in **CHAS** (Charles River dummy variable (= 1 if tract bounds river; 0 otherwise)) is associated with an **increase of \\$75.934** in house price.\n",
-    "- Holding all other features fixed, a 1 unit increase in **NOX** (nitrogen oxides concentration (parts per 10 million)) is associated with an **decrease of \\$196.923** in house price.\n",
-    "- Holding all other features fixed, a 1 unit increase in **RM** (average number of rooms per dwelling) is associated with an **increase of \\$405.448** in house price.\n",
-    "- Holding all other features fixed, a 1 unit increase in **AGE** (proportion of owner-occupied units built prior to 1940) is associated with an **decrease of \\$32.57** in house price.\n",
-    "- Holding all other features fixed, a 1 unit increase in **DIS** (weighted mean of distances to five Boston employment centres) is associated with an **decrease of \\$300.432** in house price.\n",
-    "- Holding all other features fixed, a 1 unit increase in **RAD** (index of accessibility to radial highways) is associated with an **increase of \\$241.132** in house price.\n",
-    "- Holding all other features fixed, a 1 unit increase in **TAX** (full-value property-tax rate per \\$10,000) is associated with an **decrease of \\$195.576** in house price.\n",
-    "- Holding all other features fixed, a 1 unit increase in **PTRATIO** (pupil-teacher ratio by town) is associated with a **decrease of \\$226.696** in house price.\n",
-    "- Holding all other features fixed, a 1 unit increase in **B** (1000(Bk - 0.63)^2 where Bk is the proportion of blacks by town) is associated with an **increase of \\$119.212** in house price.\n",
-    "- Holding all other features fixed, a 1 unit increase in **LSTAT** ( lower status of the population (percent)) is associated with a **decrease of \\$300.684** in house price."
+    "- Holding all other features fixed, 1 unit increase in **CRIM** (per capita crime rate by town) is associated with a **decrease of $96.05** in house price.\n",
+    "\n",
+    "- Holding all other features fixed, 1 unit increase in **ZN** (proportion of residential land zoned for lots over 25,000 sq.ft) is associated with an **increase of $70.401** in house price.\n",
+    "\n",
+    "- Holding all other features fixed, 1 unit increase in **INDUS** (proportion of non-retail business acres per town) is associated with an **increase of $15.266** in house price.\n",
+    "\n",
+    "- Holding all other features fixed, 1 unit increase in **CHAS** (Charles River dummy variable (= 1 if tract bounds river; 0 otherwise)) is associated with an **increase of $75.934** in house price.\n",
+    "\n",
+    "- Holding all other features fixed, 1 unit increase in **NOX** (nitrogen oxides concentration (parts per 10 million)) is associated with n **decrease of $196.923** in house price.\n",
+    "\n",
+    "- Holding all other features fixed, 1 unit increase in **RM** (average number of rooms per dwelling) is associated with an **increase of $405.448** in house price.\n",
+    "\n",
+    "- Holding all other features fixed, 1 unit increase in **AGE** (proportion of owner-occupied units built prior to 1940) is associated with a **decrease of $32.57** in house price.\n",
+    "\n",
+    "- Holding all other features fixed, 1 unit increase in **DIS** (weighted mean of distances to five Boston employment centres) is associated with a **decrease of $300.432** in house price.\n",
+    "\n",
+    "- Holding all other features fixed, 1 unit increase in **RAD** (index of accessibility to radial highways) is associated with an **increase of $241.132** in house price.\n",
+    "\n",
+    "- Holding all other features fixed, 1 unit increase in **TAX** (full-value property-tax rate per $10,000) is associated with a **decrease of $195.576** in house price.\n",
+    "\n",
+    "- Holding all other features fixed, 1 unit increase in **PTRATIO** (pupil-teacher ratio by town) is associated with a **decrease of $226.696** in house price.\n",
+    "\n",
+    "- Holding all other features fixed, 1 unit increase in **B** (1000(Bk - 0.63)^2 where Bk is the proportion of blacks by town) is associated with an **increase of $119.212** in house price.\n",
+    "\n",
+    "- Holding all other features fixed, 1 unit increase in **LSTAT** ( lower status of the population (percent)) is associated with a **decrease of \\$300.684** in house price.\n"
    ]
   },
   {
@@ -1812,6 +1823,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Residuals plot"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 34,
    "metadata": {},
@@ -1827,7 +1845,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x17e54438b38>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1f5073f2b38>"
       ]
      },
      "execution_count": 34,
