--- a/jupyter_files_for_training/PCA_Wine_dataset.ipynb
+++ b/jupyter_files_for_training/PCA_Wine_dataset.ipynb
@@ -13,9 +13,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Business problem:\n",
+    "# Problem Statement:\n",
     "\n",
-    "** *1. To reduce the dimensions of the dataset and to find out what features explain the most variance in your data. * **"
+    "** *To reduce the dimensions of the dataset and to find out what features explain the most variance in the data. * **"
    ]
   },
   {
@@ -24,7 +24,7 @@
    "source": [
     "# Data Dictionary:\n",
     "\n",
-    "There are has **178 rows**(samples/observations) and **14 columns**(attributes/features).\n",
+    "The dataset has **178 rows**(samples/observations) and **14 columns**(attributes).\n",
     "\n",
     "Below are the attributes:\n",
     "\n",
@@ -215,6 +215,7 @@
    ],
    "source": [
     "# Read the dataset\n",
+    "\n",
     "wine_df = pd.read_csv(\"https://archive.ics.uci.edu/ml/machine-learning-databases/wine/wine.data\", header=None)\n",
     "\n",
     "wine_df.head()"
@@ -227,6 +228,7 @@
    "outputs": [],
    "source": [
     "# Add column names to the dataset\n",
+    "\n",
     "wine_df.columns = ['wine_class', 'alcohol', 'malic_acid', 'ash', 'alcalinity_ash',\n",
     "                  'magnesium', 'total_phenol', 'flavanoids', 'nonflavanoid_phenols',\n",
     "                  'proanthocyanins', 'color_intensity', 'hue', 'diluted_wines',\n",
@@ -401,7 +403,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Since PCA is an UL technique, we will drop the target variable ('wine_class') or the label associated with each observation and then implement PCA on this data"
+    "## Since PCA is an Unsupervised Learning technique, we will drop the Target variable ('wine_class') and then implement PCA on this data"
    ]
   },
   {
@@ -434,9 +436,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# PCA Visualization\n",
+    "# Why PCA?\n",
     "\n",
-    "Since it is difficult to visualize high dimensional data, we can use PCA to find the first two principal components, and visualize the data in this new, two-dimensional space, with a single scatter-plot. Before we do this though, we'll need to scale our data so that each feature has a single unit variance."
+    "Since it is difficult to **visualize** high dimensional data, we can use PCA to find the first three principal components, and visualize the data in a 3-dimensional plot. It is also used for **data compression**. Before we do this, we have to rescale the data and bring it to standard normal distribution."
    ]
   },
   {
@@ -470,7 +472,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "PCA with Scikit Learn uses a very similar process to other preprocessing functions that come with SciKit Learn. We instantiate a PCA object, find the principal components using the fit method, then apply the rotation and dimensionality reduction by calling transform().\n",
+    "We instantiate a PCA object, find the principal components using the fit method, then apply the rotation and dimensionality reduction by calling transform().\n",
     "\n",
     "We can also specify how many components we want to keep when creating the PCA object."
    ]
@@ -493,7 +495,8 @@
     "pca = PCA(n_components=3)\n",
     "pca.fit(scaled_data)\n",
     "\n",
-    "# Now we can transform this data to its first 2 principal components.\n",
+    "# Now we can transform this data to the first 3 principal components.\n",
+    "\n",
     "X_pca = pca.transform(scaled_data)"
    ]
   },
@@ -515,6 +518,7 @@
    ],
    "source": [
     "# Shape of Original dataset (after dropping target variable 'wine_class')\n",
+    "\n",
     "scaled_data.shape"
    ]
   },
@@ -535,7 +539,8 @@
     }
    ],
    "source": [
-    "# Shape of PCA transformed new dataset\n",
+    "# Shape of PCA-transformed new dataset\n",
+    "\n",
     "X_pca.shape"
    ]
   },
@@ -543,7 +548,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Observation: We have reduced 13 dimensions to just 3 dimensions"
+    "##### Observation: From 13 dimensions we have reduced to 3 dimensions"
    ]
   },
   {
@@ -603,7 +608,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_comp = pd.DataFrame(pca.components_,columns=wine_df.columns)"
+    "df_comp = pd.DataFrame(pca.components_, columns=wine_df.columns)"
    ]
   },
   {
@@ -614,7 +619,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1856ba61940>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1ba359cd898>"
       ]
      },
      "execution_count": 16,
@@ -633,12 +638,19 @@
     }
    ],
    "source": [
-    "\"\"\"This heatmap and the color bar basically represent the correlation between \n",
+    "\"\"\"The heatmap and the color bar basically represent the correlation between \n",
     "the various features and the principal component itself.\"\"\"\n",
     "\n",
     "plt.figure(figsize=(12,6))\n",
     "sns.heatmap(df_comp,cmap='plasma',)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
