--- a/jupyter_files_for_training/Linear_Regression.ipynb
+++ b/jupyter_files_for_training/Linear_Regression.ipynb
@@ -4,18 +4,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Data Source:\n",
+    "# Problem Statement:\n",
     "\n",
-    "**SKlearn datasets: Boston Housing Prices dataset**"
+    "** To predict housing prices based on the given attributes.* **"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Problem Statement:\n",
+    "Steps:\n",
+    "1. Acquire data\n",
+    "2. Clean data\n",
+    "3. Exploratory Data Analysis\n",
+    "4. Standardise data\n",
+    "5. Split data into Train & Test sets\n",
+    "6. Create & Train Model\n",
+    "7. Model Evaluation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Data Source:\n",
     "\n",
-    "** To predict housing prices based on the given attributes.* **"
+    "**SKlearn datasets: Boston Housing Prices dataset**"
    ]
   },
   {
