--- a/jupyter_files_for_training/Selling_Personal_Loans.ipynb
+++ b/jupyter_files_for_training/Selling_Personal_Loans.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# To devise a campaign for selling Personal Loans"
+    "# Problem Statement:\n",
+    "\n",
+    "### To devise a campaign for selling Personal Loans"
    ]
   },
   {
@@ -25,6 +27,20 @@
     "\n",
     "    **To devise a campaign with better target marketing to increase the success ratio with minimal budget.**\n",
     "    (Build a Machine Learning model that will help them identify the potential customers who have higher probability of purchasing the loan.)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Steps:\n",
+    "1. Acquire data\n",
+    "2. Clean data\n",
+    "3. Exploratory Data Analysis\n",
+    "4. Standardise data\n",
+    "5. Split data into Train & Test sets\n",
+    "6. Create & Train Model\n",
+    "7. Model Evaluation"
    ]
   },
   {
@@ -94,11 +110,8 @@
     "# Seaborn is a Python data visualization library for statistical graphics\n",
     "import seaborn as sns\n",
     "\n",
-    "# Classifiers\n",
+    "# Classifier\n",
     "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.neighbors import KNeighborsClassifier\n",
-    "from sklearn.svm import SVC\n",
-    "from sklearn.tree import DecisionTreeClassifier\n",
     "\n",
     "# Importing few functions\n",
     "from sklearn.model_selection import train_test_split\n",
